# Projet4

./: README.md
Datasets/: df_master.csv
Developpement/: claasification_informations.ipynb  classification_informations.ipynb  pyproject.toml
