[project]
name = "developpement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.21.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "tqdm-pandas>=1.7.0",
]                            
